--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-datepicker": "^4.10.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-facebook-login": "^4.1.1",
     "react-flatpickr": "^3.10.13",
     "react-geocode": "^0.2.3",
